# edge-impulse-ingestion-sdk-c

./: .gitmodules  CMakeLists.txt  README.md
